implement member authorization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=securitycourse
-spring.security.user.name=alisa
-spring.security.user.password=password
+#spring.security.user.name=alisa
+#spring.security.user.password=password
+logging.level.org.springframework.security=DEBUG
 
 spring.output.ansi.enabled=ALWAYS
